Wrong snapping default in Node Editor #70508

Closed
opened 2019-10-04 06:32:19 +02:00 by Andy Sellers · 8 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.48

Blender Version
Broken: version: 2.81 (sub 13), branch: master, commit date: 2019-10-03 21:03, hash: fbc096cf07
Worked: 2.80

Short description of error
Nodes don't snap to the grid when snapping is turned on.

Exact steps for others to reproduce the error
Open Blender.
Switch to any node editor.
Move some nodes around.
Turn on snapping, and move some nodes around.
Notice how they don't snap to the grid.


Edit @JulianEisel: Issue is that values of the RNA enum were changed in a244384864, without versioning to account for existing values/defaults.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.48 **Blender Version** Broken: version: 2.81 (sub 13), branch: master, commit date: 2019-10-03 21:03, hash: `fbc096cf07` Worked: 2.80 **Short description of error** Nodes don't snap to the grid when snapping is turned on. **Exact steps for others to reproduce the error** Open Blender. Switch to any node editor. Move some nodes around. Turn on snapping, and move some nodes around. Notice how they don't snap to the grid. ---- *Edit @JulianEisel: Issue is that values of the RNA enum were changed in a244384864, without versioning to account for existing values/defaults.*
Author

Added subscriber: @Andrewm90

Added subscriber: @Andrewm90
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly
Member

Can't reproduce. This works for me in the latest builds.

Can't reproduce. This works for me in the latest builds.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

The default for the Snapping mode seems to have changed, it now snaps to other nodes by default, not to the grid. Can you confirm that that is why it's not working?

However, I don't see a commit that intentionally did that change, it's likely due to missing versioning in a244384864.
Note that Reset to Default Value sets to the intentioned default, that is grid snapping.

The default for the Snapping mode seems to have changed, it now snaps to other nodes by default, not to the grid. Can you confirm that that is why it's not working? However, I don't see a commit that intentionally did that change, it's likely due to missing versioning in a244384864. Note that *Reset to Default Value* sets to the intentioned default, that is grid snapping.
Author

Yeah, it looks like it's just a changed default.

Yeah, it looks like it's just a changed default.
Julian Eisel changed title from Nodes Don't Snap To Grid to Wrong default in Node Editor 2019-10-07 11:31:01 +02:00
Germano Cavalcante was assigned by Julian Eisel 2019-10-07 11:31:22 +02:00
Julian Eisel changed title from Wrong default in Node Editor to Wrong snapping default in Node Editor 2019-10-07 11:32:46 +02:00

This issue was referenced by 4761028fc7

This issue was referenced by 4761028fc75a2c56a74d6b0994e5f20a2282b9df

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Thomas Dinges added this to the 2.81 milestone 2023-02-08 16:46:56 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70508
No description provided.