Fix T70508: Wrong snapping default in Node Editor